--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectId":"prj_dV5xEUORskgSmlCR7IVJfIPdA63j","orgId":"team_zPkoPvHLhpIAFCELpHwmhcaz","projectName":"dashboard_mdg"}
+{"projectId":"prj_ZZ7iOZo8jEzIGo5VuCKqYNWFZZlC","orgId":"team_zPkoPvHLhpIAFCELpHwmhcaz","projectName":"dashboard-dev"}
