--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -24,6 +24,10 @@
 			"dest": "_render"
 		},
 		{
+			"src": "^/api/delete-request/?$",
+			"dest": "_render"
+		},
+		{
 			"src": "^/api/requests/?$",
 			"dest": "_render"
 		},
